--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" media="only screen and (max-width: 600px)" href="mobile.css">
@@ -48,7 +49,7 @@
     </form>
   </div>
 </nav>
-
+<video src="JACKOVIDEO.mp4" type="video/mp4" class="mask" autoplay loop playsinline muted></video>
 <section class="bg-img" id="home">
   <div id="popup1" class="overlay">
     <div class="popup">
@@ -229,6 +230,7 @@
   <!--Team-->
 </div>
  <!--Team-->
+
  <!-- Site footer -->
  <footer id="main-footer" class="add-padding ">
 
