--- a/index.html
+++ b/index.html
@@ -60,10 +60,15 @@
         </div>
     </div>
   </div>
-
   <div class="box">
     <h1 class="hero">Jacko Academy</h1>
        <img src="JackoLogoMEDIUM.png" alt="images" id="logo" class="jello-horizontal">
+       <div class="ribbon">
+         <div class="ribbon-content">
+           <h3>שיעור ניסיון</h3>
+           <h2>!חינם</h2>
+         </div>
+       </div>
     </div>
 </section>
 <div class="divider"><span></span><span> <hr></span><span></span></div>
