--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" media="only screen and (max-width: 600px)" href="mobile.css">
   <link rel="stylesheet" media="only screen and (min-width: 601px)" href="desktop.css">
+  <script src="https://kit.fontawesome.com/0f052e1a38.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <title>Jacko Academy</title>
 </head>
@@ -53,10 +55,10 @@
 <section class="bg-img" id="home">
   <div id="popup1" class="overlay">
     <div class="popup">
-      <h2>Arik Jack - אריק ז'אק</h2>
+      <h2>Ariel Jack - אריאל ז'אק</h2>
         <a class="close" href="#">&times;</a>
         <div class="content">
-          <h4>058-550-0800</h4>
+          <h4 ><a href="tel:052-6722660">058-550-0800</a></h4>
         </div>
     </div>
   </div>
@@ -135,7 +137,7 @@
                <img src="Arik.jpg" alt="images">
             </div>
             <div class="details">
-               <h2>Arik Jack<br><span>Jacko Founder</span></h2>
+               <h2>Ariel Jack<br><span>Jacko Founder</span></h2>
              </div>
           </div>
 
@@ -162,11 +164,6 @@
    </div>
      <!--Video-->
      <div class="divider"><span></span><span> <hr></span><span></span></div>
-  <!--   <h1 class="hero">Classes</h1>
-    <div id="Video" class="embed-responsive embed-responsive-16by9">
-      <iframe src="https://www.facebook.com/plugins/video.php?height=308&href=https%3A%2F%2Fwww.facebook.com%2FJackoAcademy%2Fvideos%2F3057673490966357%2F&show_text=false&width=560" width="560" height="308" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
-    </div>
-  -->
     <h1 class="hero" id="events">Events</h1>
     <!--Video-->
     <div id="Video" class="embed-responsive embed-responsive-16by9">
@@ -227,14 +224,12 @@
   </div>
    <div class="divider"><span></span><span> <hr></span><span></span></div>
   <h2 class="hero display-1" id="location">Location</h2>
+     <a href="https://www.waze.com/en/livemap/directions?latlng=31.7830285%2C34.6456303&utm_expid=.z332TkT-TdGeMi_l_4XUWA.0&utm_referrer=https%3A%2F%2Fdevelopers.google.com%2F" target="_blank"><i class="fab fa-waze"></i></a>
   <!--Google map-->
   <div id="map-container-google-2" class="z-depth-1-half map-container mapStyle">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.5400547339414!2d34.64781898499708!3d31.78302848128349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502a2f767bb334d%3A0xb0f1c7b02410c64c!2z16DXl9eV150g15TXoNeR15nXkCAxLCDXkNep15PXldeT!5e0!3m2!1siw!2sil!4v1602751790410!5m2!1siw!2sil" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </div>
   <!--Google Maps-->
-  <!--Team-->
-</div>
- <!--Team-->
 
  <!-- Site footer -->
  <footer id="main-footer" class="add-padding ">
