Call Button Added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
          <div class="ribbon-content">
            <h3>שיעור ניסיון</h3>
            <h2>!חינם</h2>
+           <form class="form-inline my-2 my-lg-0">
+               <a href="#popup1" class="hbtn hb-fill-middle-bg">Call Now</a>
+           </form>
          </div>
        </div>
     </div>
