--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
     </div>
   </div>
   <div class="box">
-    <h1 class="hero">Jacko Academy</h1>
-       <img src="JackoLogoMEDIUM.png" alt="images" id="logo" class="jello-horizontal">
+       <h1 class="hero">Jacko Academy</h1>
+       <div>
+                <img src="JackoLogoMEDIUM.png" alt="images" id="logo" class="jello-horizontal ">
+       </div>
        <div class="ribbon">
          <div class="ribbon-content">
            <h3>שיעור ניסיון</h3>
@@ -79,7 +81,7 @@
 <div class="divider"><span></span><span> <hr></span><span></span></div>
 <div class="box">
   <div class="middle-container">
-  <div class="video-gallery">
+  <div class="video-gallery center">
     <div class="gallery-item">
       <img src="DanceWorkshop.jpg" alt="Workshop" />
       <div class="gallery-item-caption">
@@ -87,7 +89,6 @@
           <h2>אקדמיה</h2>
           <p>פיתוח דור הרקדנים הבא בארץ ישראל בתחום ההיפ הופ והברייקדאנס </p>
         </div>
-
       </div>
     </div>
 
@@ -126,14 +127,6 @@
 <div class="divider"><span></span><span> <hr></span><span></span></div>
 <h1 class="hero display-1" id="team">Team</h1>
       <div class="box">
-         <div class="card">
-           <div class="imgBx">
-               <img src="Marie.jpg" alt="images">
-           </div>
-           <div class="details">
-               <h2>Marie Feldman<br><span>HipHop Teacher</span></h2>
-           </div>
-         </div>
 
           <div class="card">
             <div class="imgBx">
