--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
     </div>
   </div>
   <div class="box">
-       <h1 class="hero">Jacko Academy</h1>
        <div>
                 <img src="JackoLogoMEDIUM.png" alt="images" id="logo" class="jello-horizontal ">
        </div>
+       <h1 class="hero">Jacko Academy</h1>
        <div class="ribbon">
          <div class="ribbon-content">
            <h3>שיעור ניסיון</h3>
            <h2>!חינם</h2>
            <form class="form-inline my-2 my-lg-0">
-               <a href="#popup1" class="hbtn hb-fill-middle-bg">Call Now</a>
+               <a href="#popup1" class="hbtn-white hb-fill-middle-bg">Call Now</a>
            </form>
          </div>
        </div>
@@ -83,7 +83,7 @@
   <div class="middle-container">
   <div class="video-gallery center">
     <div class="gallery-item">
-      <img src="DanceWorkshop.jpg" alt="Workshop" />
+        <img src="DanceWorkshop.jpg" alt="Workshop" />
       <div class="gallery-item-caption">
         <div>
           <h2>אקדמיה</h2>
@@ -170,7 +170,7 @@
      <h1 class="hero">Workshops</h1>
      <!--Video-->
      <div id="Video" class="embed-responsive embed-responsive-16by9">
-       <iframe src="https://www.facebook.com/plugins/video.php?height=315&href=https%3A%2F%2Fwww.facebook.com%2FJackoAcademy%2Fvideos%2F2395575950744142%2F&show_text=false&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+      <iframe src="https://www.facebook.com/plugins/video.php?height=315&href=https%3A%2F%2Fwww.facebook.com%2FJackoAcademy%2Fvideos%2F2395575950744142%2F&show_text=false&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
      </div>
      <!--Video-->
       <div class="divider"><span></span><span> <hr></span><span></span></div>
