--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
 
      <div class="divider"><span></span><span> <hr></span><span></span></div>
      <h1 class="hero" id="academy">Academy</h1>
+     <h3>.האקדמיה נוסדה על מנת לקדם את הדור הבא של הרקדנים בארץ ישראל</h3>
+     <h3>.ברייקינג מוכר כספורט אולימפי וב2024 צפוי להתרחש בצרפת מקצים של ברייקינג</h3>
      <!--Video-->
      <div id="Video" class="embed-responsive embed-responsive-16by9">
    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FJackoAcademy%2Fvideos%2F863182507509614%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="false"></iframe>
@@ -161,6 +163,8 @@
      <!--Video-->
      <div class="divider"><span></span><span> <hr></span><span></span></div>
     <h1 class="hero" id="events">Events</h1>
+         <h2>"ליצור זכרונות טובים מאירועים גדולים"</h2>
+         <h3>אנחנו נעזור לכם ליצור אירוע בלתי נשכח וחוויה לכל המשפחה והמוזמנים, מבר/בת מצוות וחתונות , הפעלות בבתי ספר, סדנאות תנועה וריקוד וכל מה שתיצטרכו! - מוכנים להיות שם בשביל לתת מעצמינו לכל מעוניין באופן אישי</h3>
     <!--Video-->
     <div id="Video" class="embed-responsive embed-responsive-16by9">
       <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FJackoAcademy%2Fvideos%2F3348475905198038%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
